# semgrep-pfff-libs

./: Makefile  dune  dune-project  todo.org
TCB/: Cap.ml  Cap.mli  CapRandom.mli  CapStdlib.mli  CapSys.ml  CapSys.mli  CapUnix.ml  CapUnix.mli  TCB.ml  forbid_chdir.jsonnet  forbid_exec.jsonnet  forbid_process.jsonnet
color/: dune
commons/: CapExec.mli  CapFS.ml  CapProcess.ml  CapProcess.mli  Common.ml  Common2.mli  Ftype.ml  Proc.ml  UCmd.ml  dune
commons/base/: String_.ml  dune
commons/collections/: Assoc.ml  Hashtbl_.mli  dune
commons/core/: Common.ml  Console.mli  dune
commons/regexps/: Regexp_.ml  dune
commons/tests/: Commons_tests.ml  dune
commons/testutils/: dune
commons/unsafe/: UFile.ml  dune
files_format/: dune
geometry/: dune
git_wrapper/: Git_wrapper.ml  dune
gitignore/: dune
glob/: dune
libs/commons/: CapConsole.mli  CapExec.ml  CapFS.mli  Common.mli  Common2.ml  Common2.mli  Console.ml  Exit.ml  Exit.mli  FType.ml  Ftype.mli  Hashtbl_.ml  Hashtbl_.mli  Regexp_.ml  Regexp_.mli
libs/commons2/: common2.ml  common2.mli
libs/commons2_/: common2_.ml  common2_.mli  dune
libs/git_wrapper/: Git_wrapper.ml  Git_wrapper.mli  Unit_git_wrapper.ml
libs/glob/: dune
libs/paths/: Testutil_paths.ml
paths/: List_files.ml  List_files.mli  Ppath.mli  Testutil_paths.ml  dune
process_limits/: Time_limit.ml
tracing/js/: Tracing.ml
tracing/unix/: Tracing.ml
visualization/: dune
