; Parse (and match) a glob pattern according to glob(3) and glob(7),
; with some gitignore extensions like '**'
(library
  (public_name glob)
  (libraries
    menhirLib
    commons
    profiling
  )
  (preprocess (pps
     ppx_deriving.show
     profiling.ppx
  ))
)

(ocamllex Lexer)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See semgrep-pfff-langs/scripts/menhir-wrapper for details.
; Was: (menhir (modules Parser) (flags --unused-tokens --explain --fixed-exception))
(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action (run %{workspace_root}/semgrep-pfff-langs/scripts/menhir-wrapper Parser.mly)))
