(library
 (name commons_core)
 (public_name commons.core)
 (wrapped false)
 (flags (:standard -open TCB))
 (libraries
   TCB
   commons.base
   commons.collections
   commons.regexps
   ; stdlib
   str
   unix
   ; external libs
   fpath
   yojson
   sexplib
   ANSITerminal
   ocolor
   bos
   logs
   testo
 )
 (inline_tests)
 (preprocess
   (pps
     ppx_deriving.show
     ppx_deriving.eq
     ppx_deriving.ord
     ppx_sexp_conv
     ppx_inline_test
   )
 )
)
