; Parse (and match) a glob pattern according to glob(3) and glob(7),
; with some gitignore extensions like '**'
(library
  (public_name glob)
  (libraries
    menhirLib
    commons
    profiling
  )
  (preprocess (pps
     ppx_deriving.show
     profiling.ppx
  ))
)

(ocamllex Lexer)
; Use menhir-wrapper instead of (menhir ...) to suppress known conflicts
; and catch regressions. See menhir-wrapper at project root for details.
; Was: (menhir (modules Parser) (flags --unused-tokens --explain --fixed-exception))
(rule
 (targets Parser.ml Parser.mli)
 (deps Parser.mly)
 (action (run %{project_root}/menhir-wrapper Parser.mly)))
